getting close to final:D

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             
         </div>
         <script src="game.js"></script>
+            <audio src="sounds/dank_hit.mp3" id="dank_hit"/>
+            <audio src="sounds/dank_miss.mp3" id="dank_miss"/>
+            <audio src="sounds/dank_win.mp3" id="dank_win"/>
+            <audio src="sounds/dank_score.mp3" id="dank_score"/>
     </body>
 
 </html>
